{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 622,
  "lineage": "0baad30b-2097-7bc4-d30e-b1742dcb409e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460392935358:vpc/vpc-01c792d8b3f3dec32",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c524a4961f933255",
            "default_route_table_id": "rtb-04927f11ca26b894e",
            "default_security_group_id": "sg-008c4d25b242445cf",
            "dhcp_options_id": "dopt-024af0553159bcfde",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01c792d8b3f3dec32",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04927f11ca26b894e",
            "owner_id": "460392935358",
            "tags": {
              "Name": "Dev-vpc"
            },
            "tags_all": {
              "Name": "Dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.myapp-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "myapp-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0afc41d48dca8cc03",
            "arn": "arn:aws:ec2:us-east-1:460392935358:instance/i-0e50d6ff9cd4e47ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e50d6ff9cd4e47ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "appkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-027610c63add3168d",
            "private_dns": "ip-10-0-0-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.170",
            "public_ip": "98.83.210.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ec82d43ddd14ffa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-079bc230f846803fd",
            "tags": {
              "Name": "Dev-server"
            },
            "tags_all": {
              "Name": "Dev-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f47951f287ff04bf"
            ]
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "module.myapp-server.aws_key_pair.ssh-key",
            "module.myapp-server.aws_security_group.app-sg",
            "module.myapp-server.data.aws_ami.amazon-linux-image",
            "module.myapp-subnet.aws_subnet.app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460392935358:security-group/sg-0f47951f287ff04bf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f47951f287ff04bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "41.237.156.227/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Myapp-sg",
            "name_prefix": "",
            "owner_id": "460392935358",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dev-SG"
            },
            "tags_all": {
              "Name": "Dev-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-01c792d8b3f3dec32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460392935358:internet-gateway/igw-01976dcb490a1fde2",
            "id": "igw-01976dcb490a1fde2",
            "owner_id": "460392935358",
            "tags": {
              "Name": "Dev-gateway"
            },
            "tags_all": {
              "Name": "Dev-gateway"
            },
            "vpc_id": "vpc-01c792d8b3f3dec32"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460392935358:route-table/rtb-0b085c3472228b538",
            "id": "rtb-0b085c3472228b538",
            "owner_id": "460392935358",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01976dcb490a1fde2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c792d8b3f3dec32"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc",
            "module.myapp-subnet.aws_internet_gateway.app-gateway"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtb-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07331f48d113cc3a0",
            "route_table_id": "rtb-0b085c3472228b538",
            "subnet_id": "subnet-079bc230f846803fd"
          },
          "dependencies": [
            "aws_vpc.my-vpc",
            "module.myapp-subnet.aws_internet_gateway.app-gateway",
            "module.myapp-subnet.aws_route_table.app-route-table",
            "module.myapp-subnet.aws_subnet.app-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:460392935358:subnet/subnet-079bc230f846803fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079bc230f846803fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460392935358",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dev-Subnet"
            },
            "tags_all": {
              "Name": "Dev-Subnet"
            },
            "vpc_id": "vpc-01c792d8b3f3dec32"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    }
  ]
}